--- a/gca.html
+++ b/gca.html
@@ -13,9 +13,9 @@
   <link rel="shortcut icon" href="images/favicon.ico?3879086630"/>
   <title>GCA Lab</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?68857643"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4068618071"/>
-  <link rel="stylesheet" type="text/css" href="css/gca.css?267910319" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?4003183082"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?213069771"/>
+  <link rel="stylesheet" type="text/css" href="css/gca.css?71492798" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -35,73 +35,75 @@ var __adobewebfontsappname__ = "muse";
    <div class="clearfix" id="u322-3"><!-- content -->
     <p>&nbsp;</p>
    </div>
-   <div class="clearfix grpelem" id="u1387"><!-- column -->
-    <div class="clip_frame colelem" id="u1376"><!-- image -->
-     <img class="block" id="u1376_img" src="images/unnamed-1.jpg" alt="" width="173" height="118"/>
-    </div>
-    <div class="clearfix colelem" id="u1378-62"><!-- content -->
-     <p id="u1378">&nbsp;</p>
-     <p id="u1378-3">Gustavo Caetano-Anollés</p>
-     <p id="u1378-5">Professor of Bioinformatics</p>
-     <p id="u1378-7">University Scholar</p>
-     <p id="u1378-8">&nbsp;</p>
-     <p>332 National Soybean Res Ctr</p>
-     <p>1101 West Peabody Drive</p>
-     <p>Urbana, IL 61801</p>
-     <p>Phone: (217) 333-8172</p>
-     <p>Email: gca@illinois.edu</p>
-     <p>&nbsp;</p>
-     <p id="u1378-23"><span id="u1378-20">​</span><span><span class="actAsInlineDiv normal_text" id="u1379"><!-- content --><a class="nonblock nontext actAsDiv excludeFromNormalFlow" id="u1380" href="http://cropsci.illinois.edu/"><!-- svg --><img class="svg" src="images/pasted%20svg%2026471x34.svg" width="30" height="33" alt="" data-mu-svgfallback="images/pasted%20svg%2026471x34_poster_.png"/></a></span></span></p>
-     <p>&nbsp;</p>
-     <p id="u1378-26">Primary Disciplines</p>
-     <p>Plant Pathology</p>
-     <p>Plant Protection</p>
-     <p>Plant Physiology</p>
-     <p>General Biology</p>
-     <p>Plant Breeding and Genetics</p>
-     <p>Crop Genetic Improvement</p>
-     <p>Bioinformatics and Statistics</p>
-     <p>&nbsp;</p>
-     <p id="u1378-43">Research Areas</p>
-     <p>Interaction of plants and microbes</p>
-     <p>The spontaneous mutation process</p>
-     <p>Evolution of biological networks</p>
-     <p>Function and structure in proteins and ncRNA</p>
-     <p>Evolution of macromolecular structure</p>
-     <p>&nbsp;</p>
-     <p id="u1378-56">Courses</p>
-     <p>CPSC567/IB505: Bioinformatics and Systems Biology</p>
-     <p>CPSC569/ANSC542: Applied Bioinformatics</p>
+   <div class="clearfix grpelem" id="pu1437"><!-- column -->
+    <a class="nonblock nontext MuseLinkActive clip_frame colelem" id="u1437" href="gca.html"><!-- image --><img class="block" id="u1437_img" src="images/gcalablogowhite.png" alt="" width="34" height="39"/></a>
+    <div class="clearfix colelem" id="u1387"><!-- column -->
+     <div class="clip_frame colelem" id="u1376"><!-- image -->
+      <img class="block" id="u1376_img" src="images/unnamed-1.jpg" alt="" width="173" height="118"/>
+     </div>
+     <div class="clearfix colelem" id="u1378-62"><!-- content -->
+      <p id="u1378">&nbsp;</p>
+      <p id="u1378-3">Gustavo Caetano-Anollés</p>
+      <p id="u1378-5">Professor of Bioinformatics</p>
+      <p id="u1378-7">University Scholar</p>
+      <p id="u1378-8">&nbsp;</p>
+      <p>332 National Soybean Res Ctr</p>
+      <p>1101 West Peabody Drive</p>
+      <p>Urbana, IL 61801</p>
+      <p>Phone: (217) 333-8172</p>
+      <p>Email: gca@illinois.edu</p>
+      <p>&nbsp;</p>
+      <p id="u1378-23"><span id="u1378-20">​</span><span><span class="actAsInlineDiv normal_text" id="u1467"><!-- content --><a class="nonblock nontext actAsDiv clip_frame excludeFromNormalFlow" id="u1461" href="http://cropsci.illinois.edu/"><!-- image --><img id="u1461_img" src="images/uiuc-01.jpg" alt="" width="30" height="39"/></a></span></span><span></span></p>
+      <p>&nbsp;</p>
+      <p id="u1378-26">Primary Disciplines</p>
+      <p>Plant Pathology</p>
+      <p>Plant Protection</p>
+      <p>Plant Physiology</p>
+      <p>General Biology</p>
+      <p>Plant Breeding and Genetics</p>
+      <p>Crop Genetic Improvement</p>
+      <p>Bioinformatics and Statistics</p>
+      <p>&nbsp;</p>
+      <p id="u1378-43">Research Areas</p>
+      <p>Interaction of plants and microbes</p>
+      <p>The spontaneous mutation process</p>
+      <p>Evolution of biological networks</p>
+      <p>Function and structure in proteins and ncRNA</p>
+      <p>Evolution of macromolecular structure</p>
+      <p>&nbsp;</p>
+      <p id="u1378-56">Courses</p>
+      <p>CPSC567/IB505: Bioinformatics and Systems Biology</p>
+      <p>CPSC569/ANSC542: Applied Bioinformatics</p>
+     </div>
     </div>
    </div>
-   <div class="clearfix grpelem" id="pu226"><!-- group -->
-    <a class="nonblock nontext" id="u226" href="index.html"><!-- svg --><img class="svg" src="images/pasted%20svg%2044x50.svg" width="34" height="39" alt="" data-mu-svgfallback="images/pasted%20svg%2044x50_poster_.png"/></a>
-    <nav class="MenuBar clearfix" id="menuu136"><!-- horizontal box -->
-     <div class="MenuItemContainer clearfix grpelem" id="u1394"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1395" href="gca.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1396-4"><!-- content --><p>GCA Lab</p></div></a>
-     </div>
-     <div class="MenuItemContainer clearfix grpelem" id="u151"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u154" href="research.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u156-4"><!-- content --><p>Research</p></div></a>
-     </div>
-     <div class="MenuItemContainer clearfix grpelem" id="u237"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u238" href="resources.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u240-4"><!-- content --><p>Resources</p></div></a>
-     </div>
-     <div class="MenuItemContainer clearfix grpelem" id="u165"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u168" href="publications.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u171-4"><!-- content --><p>Publications</p></div></a>
-     </div>
-     <div class="MenuItemContainer clearfix grpelem" id="u144"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u145" href="courses.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u146-4"><!-- content --><p>Courses</p></div></a>
-     </div>
-     <div class="MenuItemContainer clearfix grpelem" id="u158"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u161" href="lab-members.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u164-4"><!-- content --><p>Lab Members</p></div></a>
-     </div>
-     <div class="MenuItemContainer clearfix grpelem" id="u172"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u173" href="links.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u176-4"><!-- content --><p>Links</p></div></a>
-     </div>
-    </nav>
-   </div>
-   <div class="clearfix grpelem" id="pu1403"><!-- column -->
-    <img class="svg colelem" id="u1403" src="images/pasted%20svg%20369123x101.svg" width="432" height="94" alt="" data-mu-svgfallback="images/pasted%20svg%20369123x101_poster_.png"/><!-- svg -->
+   <nav class="MenuBar clearfix" id="menuu136"><!-- horizontal box -->
+    <div class="MenuItemContainer clearfix grpelem" id="u1394"><!-- vertical box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u1395" href="gca.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1396-4"><!-- content --><p>GCA Lab</p></div></a>
+    </div>
+    <div class="MenuItemContainer clearfix grpelem" id="u151"><!-- vertical box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u154" href="research.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u156-4"><!-- content --><p>Research</p></div></a>
+    </div>
+    <div class="MenuItemContainer clearfix grpelem" id="u237"><!-- vertical box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u238" href="resources.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u240-4"><!-- content --><p>Resources</p></div></a>
+    </div>
+    <div class="MenuItemContainer clearfix grpelem" id="u165"><!-- vertical box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u168" href="publications.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u171-4"><!-- content --><p>Publications</p></div></a>
+    </div>
+    <div class="MenuItemContainer clearfix grpelem" id="u144"><!-- vertical box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u145" href="courses.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u146-4"><!-- content --><p>Courses</p></div></a>
+    </div>
+    <div class="MenuItemContainer clearfix grpelem" id="u158"><!-- vertical box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u161" href="lab-members.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u164-4"><!-- content --><p>Lab Members</p></div></a>
+    </div>
+    <div class="MenuItemContainer clearfix grpelem" id="u172"><!-- vertical box -->
+     <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u173" href="links.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u176-4"><!-- content --><p>Links</p></div></a>
+    </div>
+   </nav>
+   <div class="clearfix grpelem" id="pu1449"><!-- column -->
+    <div class="clip_frame colelem" id="u1449"><!-- image -->
+     <img class="block" id="u1449_img" src="images/gcalab.png" alt="" width="328" height="88"/>
+    </div>
     <div class="clip_frame colelem" id="u1385"><!-- image -->
      <img class="block" id="u1385_img" src="images/originlife-1.jpg" alt="" width="431" height="184"/>
     </div>
@@ -119,7 +121,7 @@ var __adobewebfontsappname__ = "muse";
      <p><span id="u321">Gustavo Caetano-Anollés Lab - Evolutionary Bioinformatics at UIUC</span></p>
     </div>
     <div class="clearfix grpelem" id="u334-26"><!-- content -->
-     <p><a class="nonblock" href="index.html">Home</a><span id="u334-3">&nbsp; /&nbsp; </span><a class="nonblock" href="research.html">Research</a><span id="u334-6">&nbsp; /&nbsp; </span><a class="nonblock" href="research.html">Resources</a><span id="u334-9">&nbsp; /&nbsp; </span><a class="nonblock" href="publications.html">Publications</a>&nbsp; <span id="u334-13">/&nbsp; </span><a class="nonblock" href="courses.html">Courses</a>&nbsp; <span id="u334-17">/&nbsp; </span><a class="nonblock" href="lab-members.html">Lab Members</a>&nbsp; <span id="u334-21">/&nbsp; </span><a class="nonblock" href="links.html">Links</a></p>
+     <p><a class="nonblock" href="gca.html">GCA Lab</a><span id="u334-3">&nbsp; /&nbsp; </span><a class="nonblock" href="research.html">Research</a><span id="u334-6">&nbsp; /&nbsp; </span><a class="nonblock" href="research.html">Resources</a><span id="u334-9">&nbsp; /&nbsp; </span><a class="nonblock" href="publications.html">Publications</a>&nbsp; <span id="u334-13">/&nbsp; </span><a class="nonblock" href="courses.html">Courses</a>&nbsp; <span id="u334-17">/&nbsp; </span><a class="nonblock" href="lab-members.html">Lab Members</a>&nbsp; <span id="u334-21">/&nbsp; </span><a class="nonblock" href="links.html">Links</a></p>
     </div>
    </div>
   </div>
