--- a/links.html
+++ b/links.html
@@ -11,9 +11,9 @@
   <link rel="shortcut icon" href="images/favicon.ico?3879086630"/>
   <title>Links</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?68857643"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4068618071"/>
-  <link rel="stylesheet" type="text/css" href="css/links.css?4287236145" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?4003183082"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?213069771"/>
+  <link rel="stylesheet" type="text/css" href="css/links.css?315333586" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -57,7 +57,7 @@ var __adobewebfontsappname__ = "muse";
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u173" href="links.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u176-4"><!-- content --><p>Links</p></div></a>
      </div>
     </nav>
-    <a class="nonblock nontext pinned-colelem" id="u226" href="index.html"><!-- svg --><img class="svg" src="images/pasted%20svg%2044x50.svg" width="34" height="39" alt="" data-mu-svgfallback="images/pasted%20svg%2044x50_poster_.png"/></a>
+    <a class="nonblock nontext clip_frame colelem" id="u1437" href="gca.html"><!-- image --><img class="block" id="u1437_img" src="images/gcalablogowhite.png" alt="" width="34" height="39"/></a>
     <div class="clearfix colelem" id="u395-4"><!-- content -->
      <p>LINKS</p>
     </div>
@@ -318,7 +318,7 @@ var __adobewebfontsappname__ = "muse";
       <p><span id="u321">Gustavo Caetano-Anollés Lab - Evolutionary Bioinformatics at UIUC</span></p>
      </div>
      <div class="clearfix grpelem" id="u334-26"><!-- content -->
-      <p><a class="nonblock" href="index.html">Home</a><span id="u334-3">&nbsp; /&nbsp; </span><a class="nonblock" href="research.html">Research</a><span id="u334-6">&nbsp; /&nbsp; </span><a class="nonblock" href="research.html">Resources</a><span id="u334-9">&nbsp; /&nbsp; </span><a class="nonblock" href="publications.html">Publications</a>&nbsp; <span id="u334-13">/&nbsp; </span><a class="nonblock" href="courses.html">Courses</a>&nbsp; <span id="u334-17">/&nbsp; </span><a class="nonblock" href="lab-members.html">Lab Members</a>&nbsp; <span id="u334-21">/&nbsp; </span><a class="nonblock" href="links.html">Links</a></p>
+      <p><a class="nonblock" href="gca.html">GCA Lab</a><span id="u334-3">&nbsp; /&nbsp; </span><a class="nonblock" href="research.html">Research</a><span id="u334-6">&nbsp; /&nbsp; </span><a class="nonblock" href="research.html">Resources</a><span id="u334-9">&nbsp; /&nbsp; </span><a class="nonblock" href="publications.html">Publications</a>&nbsp; <span id="u334-13">/&nbsp; </span><a class="nonblock" href="courses.html">Courses</a>&nbsp; <span id="u334-17">/&nbsp; </span><a class="nonblock" href="lab-members.html">Lab Members</a>&nbsp; <span id="u334-21">/&nbsp; </span><a class="nonblock" href="links.html">Links</a></p>
      </div>
     </div>
    </div>
