--- a/resources.html
+++ b/resources.html
@@ -11,9 +11,9 @@
   <link rel="shortcut icon" href="images/favicon.ico?3879086630"/>
   <title>Resources</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?68857643"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4068618071"/>
-  <link rel="stylesheet" type="text/css" href="css/resources.css?4189280262" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?4003183082"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?213069771"/>
+  <link rel="stylesheet" type="text/css" href="css/resources.css?4167523088" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -57,7 +57,7 @@ var __adobewebfontsappname__ = "muse";
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u173" href="links.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u176-4"><!-- content --><p>Links</p></div></a>
      </div>
     </nav>
-    <a class="nonblock nontext pinned-colelem" id="u226" href="index.html"><!-- svg --><img class="svg" src="images/pasted%20svg%2044x50.svg" width="34" height="39" alt="" data-mu-svgfallback="images/pasted%20svg%2044x50_poster_.png"/></a>
+    <a class="nonblock nontext clip_frame colelem" id="u1437" href="gca.html"><!-- image --><img class="block" id="u1437_img" src="images/gcalablogowhite.png" alt="" width="34" height="39"/></a>
     <div class="clearfix colelem" id="u391-4"><!-- content -->
      <p>RESOURCES</p>
     </div>
@@ -66,26 +66,17 @@ var __adobewebfontsappname__ = "muse";
       <div class="clearfix colelem" id="u1045-4"><!-- content -->
        <p><span id="u1045">LAB-DEVELOPED TOOLS AND DATABASES</span></p>
       </div>
-      <div class="clearfix colelem" id="pu1406"><!-- group -->
-       <div class="clearfix grpelem" id="u1406"><!-- column -->
-        <div class="pointer_cursor clearfix colelem" id="u1410"><!-- group -->
-         <a class="block" href="http://www.manet.uiuc.edu/nobai/nobai.php"></a>
-         <a class="nonblock nontext grpelem" id="u1407" href="http://www.manet.uiuc.edu/nobai/nobai.php"><!-- svg --><img class="svg" src="images/pasted%20svg%20174972x63.svg" width="119" height="45" alt="" data-mu-svgfallback="images/pasted%20svg%20174972x63_poster_.png"/></a>
-        </div>
+      <div class="clearfix colelem" id="ppu1410"><!-- group -->
+       <div class="clearfix grpelem" id="pu1410"><!-- column -->
+        <a class="nonblock nontext colelem" id="u1410" href="http://www.manet.uiuc.edu/nobai/nobai.php"><!-- simple frame --></a>
         <a class="nonblock nontext clearfix colelem" id="u1409-8" href="http://www.manet.uiuc.edu/nobai/nobai.php"><!-- content --><p>The Nobai</p><p>Software</p><p>Package</p></a>
        </div>
-       <div class="clearfix grpelem" id="u1412"><!-- column -->
-        <div class="pointer_cursor clearfix colelem" id="u1416"><!-- group -->
-         <a class="block" href="http://gca.cropsci.illinois.edu/kaffe/"></a>
-         <a class="nonblock nontext grpelem" id="u1413" href="http://gca.cropsci.illinois.edu/kaffe/"><!-- svg --><img class="svg" src="images/pasted%20svg%20141754x182.svg" width="71" height="92" alt="" data-mu-svgfallback="images/pasted%20svg%20141754x182_poster_.png"/></a>
-        </div>
+       <div class="clearfix grpelem" id="pu1416"><!-- column -->
+        <a class="nonblock nontext colelem" id="u1416" href="http://gca.cropsci.illinois.edu/kaffe/"><!-- simple frame --></a>
         <a class="nonblock nontext clearfix colelem" id="u1415-8" href="http://gca.cropsci.illinois.edu/kaffe/"><!-- content --><p>DNA Markers:</p><p>Selected Protocols</p><p>and Overviews</p></a>
        </div>
        <div class="clearfix grpelem" id="u1417"><!-- column -->
-        <div class="pointer_cursor clearfix colelem" id="u1421"><!-- group -->
-         <a class="block" href="http://www.manet.uiuc.edu/"></a>
-         <a class="nonblock nontext grpelem" id="u1418" href="http://www.manet.uiuc.edu/"><!-- svg --><img class="svg" src="images/pasted%20svg%20250977x153.svg" width="118" height="72" alt="" data-mu-svgfallback="images/pasted%20svg%20250977x153_poster_.png"/></a>
-        </div>
+        <a class="nonblock nontext colelem" id="u1421" href="http://www.manet.uiuc.edu/"><!-- simple frame --></a>
         <a class="nonblock nontext clearfix colelem" id="u1420-8" href="http://www.manet.uiuc.edu/"><!-- content --><p>Molecular</p><p>Ancestry</p><p>Network</p></a>
        </div>
       </div>
@@ -120,12 +111,17 @@ var __adobewebfontsappname__ = "muse";
      </div>
     </div>
     <div class="verticalspacer"></div>
+    <div class="clearfix colelem" id="pu1499"><!-- group -->
+     <a class="nonblock nontext clip_frame grpelem" id="u1499" href="http://www.manet.uiuc.edu/nobai/nobai.php"><!-- image --><img class="block" id="u1499_img" src="images/nobai-01.png" alt="" width="118" height="43"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u1487" href="http://gca.cropsci.illinois.edu/kaffe/"><!-- image --><img class="block" id="u1487_img" src="images/dnakaffee.png" alt="" width="71" height="92"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u1493" href="http://www.manet.uiuc.edu/"><!-- image --><img class="block" id="u1493_img" src="images/manet.png" alt="" width="119" height="73"/></a>
+    </div>
     <div class="clearfix colelem" id="pu321-4"><!-- group -->
      <div class="clearfix grpelem" id="u321-4"><!-- content -->
       <p><span id="u321">Gustavo Caetano-Anollés Lab - Evolutionary Bioinformatics at UIUC</span></p>
      </div>
      <div class="clearfix grpelem" id="u334-26"><!-- content -->
-      <p><a class="nonblock" href="index.html">Home</a><span id="u334-3">&nbsp; /&nbsp; </span><a class="nonblock" href="research.html">Research</a><span id="u334-6">&nbsp; /&nbsp; </span><a class="nonblock" href="research.html">Resources</a><span id="u334-9">&nbsp; /&nbsp; </span><a class="nonblock" href="publications.html">Publications</a>&nbsp; <span id="u334-13">/&nbsp; </span><a class="nonblock" href="courses.html">Courses</a>&nbsp; <span id="u334-17">/&nbsp; </span><a class="nonblock" href="lab-members.html">Lab Members</a>&nbsp; <span id="u334-21">/&nbsp; </span><a class="nonblock" href="links.html">Links</a></p>
+      <p><a class="nonblock" href="gca.html">GCA Lab</a><span id="u334-3">&nbsp; /&nbsp; </span><a class="nonblock" href="research.html">Research</a><span id="u334-6">&nbsp; /&nbsp; </span><a class="nonblock" href="research.html">Resources</a><span id="u334-9">&nbsp; /&nbsp; </span><a class="nonblock" href="publications.html">Publications</a>&nbsp; <span id="u334-13">/&nbsp; </span><a class="nonblock" href="courses.html">Courses</a>&nbsp; <span id="u334-17">/&nbsp; </span><a class="nonblock" href="lab-members.html">Lab Members</a>&nbsp; <span id="u334-21">/&nbsp; </span><a class="nonblock" href="links.html">Links</a></p>
      </div>
     </div>
    </div>
