--- a/courses.html
+++ b/courses.html
@@ -11,9 +11,9 @@
   <link rel="shortcut icon" href="images/favicon.ico?3879086630"/>
   <title>Courses</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?68857643"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4068618071"/>
-  <link rel="stylesheet" type="text/css" href="css/courses.css?4042280985" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?4003183082"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?213069771"/>
+  <link rel="stylesheet" type="text/css" href="css/courses.css?516099839" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -57,12 +57,12 @@ var __adobewebfontsappname__ = "muse";
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u173" href="links.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u176-4"><!-- content --><p>Links</p></div></a>
      </div>
     </nav>
-    <a class="nonblock nontext pinned-colelem" id="u226" href="index.html"><!-- svg --><img class="svg" src="images/pasted%20svg%2044x50.svg" width="34" height="39" alt="" data-mu-svgfallback="images/pasted%20svg%2044x50_poster_.png"/></a>
+    <a class="nonblock nontext clip_frame colelem" id="u1437" href="gca.html"><!-- image --><img class="block" id="u1437_img" src="images/gcalablogowhite.png" alt="" width="34" height="39"/></a>
     <div class="clearfix colelem" id="u393-4"><!-- content -->
      <p>COURSES</p>
     </div>
     <div class="clearfix colelem" id="u408-46"><!-- content -->
-     <p id="u408-4"><span id="u408">​</span><span><span class="actAsInlineDiv normal_text" id="u446"><!-- content --><span class="actAsDiv clip_frame excludeFromNormalFlow" id="u440"><!-- image --><img id="u440_img" src="images/network.jpg" alt="" width="99" height="98"/></span></span></span><span></span></p>
+     <p id="u408-4"><span id="u408">​</span><span><span class="actAsInlineDiv normal_text" id="u1480"><!-- content --><span class="actAsDiv clip_frame excludeFromNormalFlow" id="u1474"><!-- image --><img id="u1474_img" src="images/network.jpg" alt="" width="99" height="93"/></span></span></span><span></span></p>
      <p id="u408-6">CPSC 569 / ANSC 542</p>
      <p id="u408-8">APPLIED BIOINFORMATICS</p>
      <p id="u408-9">&nbsp;</p>
@@ -88,7 +88,7 @@ var __adobewebfontsappname__ = "muse";
       <p><span id="u321">Gustavo Caetano-Anollés Lab - Evolutionary Bioinformatics at UIUC</span></p>
      </div>
      <div class="clearfix grpelem" id="u334-26"><!-- content -->
-      <p><a class="nonblock" href="index.html">Home</a><span id="u334-3">&nbsp; /&nbsp; </span><a class="nonblock" href="research.html">Research</a><span id="u334-6">&nbsp; /&nbsp; </span><a class="nonblock" href="research.html">Resources</a><span id="u334-9">&nbsp; /&nbsp; </span><a class="nonblock" href="publications.html">Publications</a>&nbsp; <span id="u334-13">/&nbsp; </span><a class="nonblock" href="courses.html">Courses</a>&nbsp; <span id="u334-17">/&nbsp; </span><a class="nonblock" href="lab-members.html">Lab Members</a>&nbsp; <span id="u334-21">/&nbsp; </span><a class="nonblock" href="links.html">Links</a></p>
+      <p><a class="nonblock" href="gca.html">GCA Lab</a><span id="u334-3">&nbsp; /&nbsp; </span><a class="nonblock" href="research.html">Research</a><span id="u334-6">&nbsp; /&nbsp; </span><a class="nonblock" href="research.html">Resources</a><span id="u334-9">&nbsp; /&nbsp; </span><a class="nonblock" href="publications.html">Publications</a>&nbsp; <span id="u334-13">/&nbsp; </span><a class="nonblock" href="courses.html">Courses</a>&nbsp; <span id="u334-17">/&nbsp; </span><a class="nonblock" href="lab-members.html">Lab Members</a>&nbsp; <span id="u334-21">/&nbsp; </span><a class="nonblock" href="links.html">Links</a></p>
      </div>
     </div>
    </div>
