--- a/publications.html
+++ b/publications.html
@@ -11,9 +11,9 @@
   <link rel="shortcut icon" href="images/favicon.ico?3879086630"/>
   <title>Publications</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?68857643"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4068618071"/>
-  <link rel="stylesheet" type="text/css" href="css/publications.css?94726123" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?4003183082"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?213069771"/>
+  <link rel="stylesheet" type="text/css" href="css/publications.css?185386043" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -31,12 +31,14 @@ var __adobewebfontsappname__ = "muse";
 
   <div class="shadow clearfix" id="page"><!-- column -->
    <div class="position_content" id="page_position_content">
-    <a class="anchor_item colelem" id="top"></a>
+    <div class="clearfix colelem" id="ptop"><!-- group -->
+     <a class="anchor_item grpelem" id="top"></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u1437" href="gca.html"><!-- image --><img class="block" id="u1437_img" src="images/gcalablogowhite.png" alt="" width="34" height="39"/></a>
+    </div>
     <div class="clearfix colelem" id="pu322-3"><!-- group -->
      <div class="clearfix" id="u322-3"><!-- content -->
       <p>&nbsp;</p>
      </div>
-     <a class="nonblock nontext" id="u226" href="index.html"><!-- svg --><img class="svg" src="images/pasted%20svg%2044x50.svg" width="34" height="39" alt="" data-mu-svgfallback="images/pasted%20svg%2044x50_poster_.png"/></a>
      <nav class="MenuBar clearfix" id="menuu136"><!-- horizontal box -->
       <div class="MenuItemContainer clearfix grpelem" id="u1394"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1395" href="gca.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1396-4"><!-- content --><p>GCA Lab</p></div></a>
@@ -576,7 +578,7 @@ var __adobewebfontsappname__ = "muse";
       <p><span id="u321">Gustavo Caetano-Anollés Lab - Evolutionary Bioinformatics at UIUC</span></p>
      </div>
      <div class="clearfix grpelem" id="u334-26"><!-- content -->
-      <p><a class="nonblock" href="index.html">Home</a><span id="u334-3">&nbsp; /&nbsp; </span><a class="nonblock" href="research.html">Research</a><span id="u334-6">&nbsp; /&nbsp; </span><a class="nonblock" href="research.html">Resources</a><span id="u334-9">&nbsp; /&nbsp; </span><a class="nonblock" href="publications.html">Publications</a>&nbsp; <span id="u334-13">/&nbsp; </span><a class="nonblock" href="courses.html">Courses</a>&nbsp; <span id="u334-17">/&nbsp; </span><a class="nonblock" href="lab-members.html">Lab Members</a>&nbsp; <span id="u334-21">/&nbsp; </span><a class="nonblock" href="links.html">Links</a></p>
+      <p><a class="nonblock" href="gca.html">GCA Lab</a><span id="u334-3">&nbsp; /&nbsp; </span><a class="nonblock" href="research.html">Research</a><span id="u334-6">&nbsp; /&nbsp; </span><a class="nonblock" href="research.html">Resources</a><span id="u334-9">&nbsp; /&nbsp; </span><a class="nonblock" href="publications.html">Publications</a>&nbsp; <span id="u334-13">/&nbsp; </span><a class="nonblock" href="courses.html">Courses</a>&nbsp; <span id="u334-17">/&nbsp; </span><a class="nonblock" href="lab-members.html">Lab Members</a>&nbsp; <span id="u334-21">/&nbsp; </span><a class="nonblock" href="links.html">Links</a></p>
      </div>
     </div>
    </div>
