--- a/research.html
+++ b/research.html
@@ -12,8 +12,8 @@
   <title>Research</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4003183082"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?213069771"/>
-  <link rel="stylesheet" type="text/css" href="css/research.css?4148962157" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?253355220"/>
+  <link rel="stylesheet" type="text/css" href="css/research.css?164110296" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -43,6 +43,9 @@ var __adobewebfontsappname__ = "muse";
      </div>
      <div class="MenuItemContainer clearfix grpelem" id="u237"><!-- vertical box -->
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u238" href="resources.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u240-4"><!-- content --><p>Resources</p></div></a>
+     </div>
+     <div class="MenuItemContainer clearfix grpelem" id="u1528"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u1529" href="resou.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1532-4"><!-- content --><p>RESOU</p></div></a>
      </div>
      <div class="MenuItemContainer clearfix grpelem" id="u165"><!-- vertical box -->
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u168" href="publications.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u171-4"><!-- content --><p>Publications</p></div></a>
