--- a/courses.html
+++ b/courses.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "jquery.musemenu.js", "courses.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.watch.js", "courses.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -11,9 +11,9 @@
   <link rel="shortcut icon" href="images/favicon.ico?3879086630"/>
   <title>Courses</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?4003183082"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?213069771"/>
-  <link rel="stylesheet" type="text/css" href="css/courses.css?516099839" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?68857643"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3876527981"/>
+  <link rel="stylesheet" type="text/css" href="css/courses.css?4158870695" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -57,7 +57,7 @@ var __adobewebfontsappname__ = "muse";
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u173" href="links.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u176-4"><!-- content --><p>Links</p></div></a>
      </div>
     </nav>
-    <a class="nonblock nontext clip_frame colelem" id="u1437" href="gca.html"><!-- image --><img class="block" id="u1437_img" src="images/gcalablogowhite.png" alt="" width="34" height="39"/></a>
+    <a class="nonblock nontext clip_frame pinned-colelem" id="u1437" href="gca.html"><!-- image --><img class="block" id="u1437_img" src="images/gcalablogowhite.png" alt="" width="34" height="39"/></a>
     <div class="clearfix colelem" id="u393-4"><!-- content -->
      <p>COURSES</p>
     </div>
