--- a/lab-members.html
+++ b/lab-members.html
@@ -3,7 +3,7 @@
  <head>
 
   <script type="text/javascript">
-   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.watch.js", "jquery.musemenu.js", "lab-members.css"], "outOfDate":[]};
+   if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["jquery-1.8.3.min.js", "museutils.js", "jquery.musemenu.js", "jquery.watch.js", "lab-members.css"], "outOfDate":[]};
 </script>
   
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
@@ -11,9 +11,9 @@
   <link rel="shortcut icon" href="images/favicon.ico?3879086630"/>
   <title>Lab Members</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?4003183082"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?213069771"/>
-  <link rel="stylesheet" type="text/css" href="css/lab-members.css?4252046794" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?68857643"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3876527981"/>
+  <link rel="stylesheet" type="text/css" href="css/lab-members.css?235888367" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -57,7 +57,7 @@ var __adobewebfontsappname__ = "muse";
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u173" href="links.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u176-4"><!-- content --><p>Links</p></div></a>
      </div>
     </nav>
-    <a class="nonblock nontext clip_frame colelem" id="u1437" href="gca.html"><!-- image --><img class="block" id="u1437_img" src="images/gcalablogowhite.png" alt="" width="34" height="39"/></a>
+    <a class="nonblock nontext clip_frame pinned-colelem" id="u1437" href="gca.html"><!-- image --><img class="block" id="u1437_img" src="images/gcalablogowhite.png" alt="" width="34" height="39"/></a>
     <div class="clearfix colelem" id="u394-4"><!-- content -->
      <p>LAB MEMBERS</p>
     </div>
@@ -65,7 +65,7 @@ var __adobewebfontsappname__ = "muse";
      <p id="u502-2">CURRENT LAB MEMBERS</p>
      <p id="u502-3">&nbsp;</p>
      <p id="u502-7"><span id="u502-4">​</span><span><span class="actAsInlineDiv normal_text" id="u589"><!-- content --><span class="actAsDiv clip_frame excludeFromNormalFlow" id="u583"><!-- image --><img id="u583_img" src="images/caetano.jpg" alt="" width="70" height="77"/></span></span></span><span></span></p>
-     <p id="u502-9">Gustavo Caetano-Anolles</p>
+     <p id="u502-9">Gustavo Caetano-Anollés</p>
      <p id="u502-11">Professor, Crop Sciences, UIUC</p>
      <p id="u502-13">332 National Soybean Research Center, MC-635</p>
      <p id="u502-15">gca@illinois.edu</p>
